--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,6 +7,8 @@ management:
       enabled: true
     livenessstate:
       enabled: true
+    readinessstate:
+      enabled: true
   endpoint:
     health:
       show-details: "always"
@@ -15,6 +17,10 @@ management:
       base-path: /
       exposure:
         include: health, info, prometheus
+
+#logging:
+#  level:
+#    org.springframework: debug
 
 #If you use a database then uncomment below lines and update db properties accordingly
 spring:
