Setting up secrete

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -14,6 +14,8 @@ management:
       exposure:
         include: health, info, prometheus
 
+testProperty: ${testsecret:defaultValue}
+
 #logging:
 #  level:
 #    org.springframework: debug
