--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -1,5 +1,8 @@
 spring:
   cloud:
     propertiesvolume:
+      enabled: true
       prefixed: false
       paths: /mnt/secrets/wa
+        aliases:
+          testsecret: AN_ALIASED_VALUE
