Added environment variable to enable/disable swagger.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,6 +15,7 @@ management:
         include: health, info, prometheus
 
 testProperty: ${AN_ALIASED_VALUE:defaultValue}
+enableSwagger: ${ENABLE_SWAGGER:true}
 
 #logging:
 #  level:
