--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -6,6 +6,7 @@ java:
   environment:
     RESTART_APP: 1
     ENABLE_SWAGGER: true
+    CAMUNDA_URL: "http://camunda-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/engine-rest"
   keyVaults:
     wa:
       secrets:
