Create a user task based if the transition is mapped to a task.
After evaluating the transitions to see if it is mapped to a task
by calling the DMN. Kick off a process instance of the create task
workflow which will create a user task to be put on the user task
list. For now the task just has the CCD and task type on it.

--- a/build.gradle
+++ b/build.gradle
@@ -251,7 +251,12 @@ dependencies {
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
+  //for testing Camunda config will move out of this project
   integrationTestImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: '7.13.0'
+  integrationTestImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '7.0.0'
+  integrationTestImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.13.0'
+  integrationTestImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
   functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
