--- a/build.gradle
+++ b/build.gradle
@@ -256,6 +256,7 @@ dependencies {
   integrationTestImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '7.0.0'
   integrationTestImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.13.0'
   integrationTestImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
+  integrationTestImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
 
 
   functionalTestImplementation sourceSets.main.runtimeClasspath
