RWA-117: Added controller advice for exceptions. (#28)
* Added controller advice for exceptions.
Added env variable to control whether to also log the exception to the console.

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,6 +16,9 @@ management:
 
 enableSwagger: ${ENABLE_SWAGGER:true}
 
+config:
+  stacktraceEnabled:  ${STACKTRACE_ENABLED:false}
+
 camunda:
   url: ${CAMUNDA_URL:http://localhost:8080/engine-rest}
   getTaskDmnId: getTask
