--- a/build.gradle
+++ b/build.gradle
@@ -221,6 +221,7 @@ def versions = [
   gradlePitest    : '1.5.1',
   pitest          : '1.5.2',
   sonarPitest     : '0.5',
+  camunda         : '7.13.0'
 ]
 
 ext.libraries = [
@@ -256,6 +257,9 @@ dependencies {
 
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.4.RELEASE'
 
+  compile group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '1.3.1'
+  compile group: 'javax.xml', name: 'jaxb-api', version: '2.1'
+
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
@@ -272,7 +276,7 @@ dependencies {
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
   //for testing Camunda config will move out of this project
-  integrationTestImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: '7.13.0'
+  integrationTestImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: "${versions.camunda}"
   integrationTestImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '7.0.0'
   integrationTestImplementation group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.13.0'
   integrationTestImplementation group: 'com.h2database', name: 'h2', version: '1.4.200'
