--- a/build.gradle
+++ b/build.gradle
@@ -166,7 +166,7 @@ sonarqube {
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
-    property "sonar.exclusions", "src/testUtils/java/uk/gov/hmcts/reform/waworkflowapi/api/**"
+    property "sonar.exclusions", "src/testUtils/java/uk/gov/hmcts/reform/waworkflowapi/**"
   }
 }
 
@@ -259,6 +259,9 @@ dependencies {
   compile group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '1.3.1'
   compile group: 'javax.xml', name: 'jaxb-api', version: '2.1'
 
+  compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.1'
+  compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
+
   testImplementation libraries.junit5
   testImplementation group: 'org.springframework.boot', name: 'spring-boot-starter-test', {
     exclude group: 'junit', module: 'junit'
@@ -269,11 +272,6 @@ dependencies {
   testCompile group: 'com.google.guava', name: 'guava-testlib', version: '29.0-jre'
   testCompile group: 'com.jparams', name: 'to-string-verifier', version: '1.4.8'
 
-
-  testUtilsImplementation sourceSets.main.runtimeClasspath
-
-  integrationTestImplementation sourceSets.main.runtimeClasspath
-  integrationTestImplementation sourceSets.test.runtimeClasspath
   //for testing Camunda config will move out of this project
   integrationTestImplementation group: 'org.camunda.bpm.dmn', name: 'camunda-engine-dmn', version: "${versions.camunda}"
   integrationTestImplementation group: 'org.camunda.bpm.assert', name: 'camunda-bpm-assert', version: '7.0.0'
@@ -285,13 +283,20 @@ dependencies {
   testCompile group: 'info.solidsoft.gradle.pitest', name: 'gradle-pitest-plugin', version: versions.gradlePitest
   testCompile group: 'org.codehaus.sonar-plugins', name: 'sonar-pitest-plugin', version: versions.sonarPitest
 
+
+  testCompile group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
+  testCompile group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
+  testCompile group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
+  testCompile group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
+  testCompile "org.junit.vintage:junit-vintage-engine:${versions.junit}"
+
+  testUtilsImplementation sourceSets.main.runtimeClasspath
+  testUtilsImplementation sourceSets.test.runtimeClasspath
+
+  integrationTestImplementation sourceSets.main.runtimeClasspath
+  integrationTestImplementation sourceSets.test.runtimeClasspath
+
   functionalTestImplementation sourceSets.main.runtimeClasspath
-  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-core', version: versions.serenity
-  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-junit', version: versions.serenity
-  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-rest-assured', version: versions.serenity
-  functionalTestImplementation group: 'net.serenity-bdd', name: 'serenity-spring', version: versions.serenity
-  functionalTestImplementation sourceSets.main.runtimeClasspath
-  functionalTestImplementation "org.junit.vintage:junit-vintage-engine:${versions.junit}"
   functionalTestImplementation sourceSets.test.runtimeClasspath
 
   smokeTestImplementation sourceSets.main.runtimeClasspath
