add charts and secret config

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -6,3 +6,4 @@ spring:
       paths: /mnt/secrets/wa
       aliases:
         AppInsightsInstrumentationKey: azure.application-insights.instrumentation-key
+        s2s-secret-workflow-api: S2S_SECRET_WORKFLOW_API
