--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ config:
   stacktraceEnabled:  ${STACKTRACE_ENABLED:false}
 
 camunda:
-  url: ${CAMUNDA_URL:http://localhost:8080/engine-rest}
+  url: ${CAMUNDA_URL:http://camunda-bpm/engine-rest}
   getTaskDmnId: getTask
 
 govUkHolidays:
