--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -51,6 +51,7 @@ security:
     - "/favicon.ico"
   authorisedServices:
     - "wa_workflow_api"
+    - "wa_case_event_handler"
 
 auth:
   provider:
