Added external task worker

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -58,6 +58,7 @@ security:
   authorisedServices:
     - "wa_workflow_api"
     - "wa_case_event_handler"
+    - "camunda-bpm"
 
 auth:
   provider:
