--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -9,8 +9,18 @@ java:
     CAMUNDA_URL: "http://camunda-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/engine-rest"
     S2S_URL: "http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
     IDAM_URL: "https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net"
+    POSTGRES_PORT: 5432
+    POSTGRES_HOST: wa-workflow-api-postgres-db-{{ .Values.global.environment }}.postgres.database.azure.com
+    POSTGRES_USERNAME: wa-wa@wa-workflow-api-postgres-db-{{ .Values.global.environment }}
+    POSTGRES_CONNECTION_OPTIONS: "?sslmode=require"
+    postgresql:
+      postgresqlUsername: wa-wa
+      postgresqlPassword: wa-wa
+      postgresqlDatabase: wa_workflow_api
   keyVaults:
     wa:
       secrets:
         - AppInsightsInstrumentationKey
         - s2s-secret-workflow-api
+  postgresql:
+    enabled: true
