--- a/src/integrationTest/resources/application-integration.yaml
+++ b/src/integrationTest/resources/application-integration.yaml
@@ -1,2 +1,12 @@
 config:
   stacktraceEnabled: false
+
+spring.flyway.enabled: false
+
+spring:
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:ia_timed_event_service
+    username: sa
+    password:
+    platform: h2
