--- a/build.gradle
+++ b/build.gradle
@@ -266,6 +266,8 @@ dependencies {
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
 
+  //CHANGEEEEE
+  compile group: 'org.camunda.bpm', name: 'camunda-engine'
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
   compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.3'
 
