--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -20,7 +20,7 @@ config:
   stacktraceEnabled:  ${STACKTRACE_ENABLED:false}
 
 camunda:
-  url: ${CAMUNDA_URL:http://camunda-bpm/engine-rest}
+  url: ${CAMUNDA_URL:http://camunda-local-bpm/engine-rest}
   getTaskDmnId: getTask
 
 govUkHolidays:
@@ -58,6 +58,8 @@ security:
   authorisedServices:
     - "wa_workflow_api"
     - "wa_case_event_handler"
+    - "camunda-local-bpm"
+
 
 auth:
   provider:
