Enable db only in preview through chart values

--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -17,3 +17,5 @@ java:
       secrets:
         - AppInsightsInstrumentationKey
         - s2s-secret-workflow-api
+  postgresql:
+    enabled: true
