data jpa code works

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -10,3 +10,9 @@ feign:
         loggerLevel: full
 
 spring.jackson.serialization.indent_output: true
+
+security:
+  authorisedServices:
+    - "wa_workflow_api"
+    - "wa_case_event_handler"
+    - "camunda-local-bpm"
