--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ plugins {
   id 'org.sonarqube' version '3.0'
   id 'info.solidsoft.pitest' version '1.5.2'
   id 'io.freefair.lombok' version '5.1.0'
+  id 'org.flywaydb.flyway' version '5.2.4'
 }
 
 apply plugin: 'net.serenity-bdd.aggregator'
@@ -262,7 +263,9 @@ dependencies {
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
   implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-  compile group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.14.0'
+
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
 
   compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.3'
   compile group: 'org.apache.logging.log4j', name: 'log4j-to-slf4j', version: '2.13.3'
