--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,7 +17,7 @@ management:
 enableSwagger: ${ENABLE_SWAGGER:true}
 
 config:
-  stacktraceEnabled:  ${STACKTRACE_ENABLED:false}
+  stacktraceEnabled: ${STACKTRACE_ENABLED:false}
 
 camunda:
   url: ${CAMUNDA_URL:http://camunda-local-bpm/engine-rest}
@@ -27,10 +27,27 @@ govUkHolidays:
   url: https://www.gov.uk/
 
 spring:
+  jpa.properties.hibernate:
+    show_sql: true
+    default_schema: ${POSTGRES_NAME:wa_workflow_api}
   application:
     name: WA workflow api
   main:
-   allow-bean-definition-overriding: true
+    allow-bean-definition-overriding: true
+  datasource:
+    driverClassName: org.postgresql.Driver
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_NAME:wa_workflow_api}${POSTGRES_CONNECTION_OPTIONS:}
+    username: ccd
+    password: ccd
+    properties:
+      charSet: UTF-8
+  flyway:
+    enabled: true
+    baselineOnMigrate: true
+    schemas: ${POSTGRES_NAME:wa_workflow_api}
+    url: jdbc:postgresql://${POSTGRES_HOST:localhost}:${POSTGRES_PORT:5432}/${POSTGRES_NAME:wa_workflow_api}${POSTGRES_CONNECTION_OPTIONS:}
+    user: ccd
+    password: ccd
 
 security:
   anonymousPaths:
@@ -47,7 +64,7 @@ security:
   authorisedServices:
     - "wa_workflow_api"
     - "wa_case_event_handler"
-    - "camunda-local-bpm"
+    - "camunda-bpm"
 
 auth:
   provider:
