Add secret to values.yaml

--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -18,3 +18,4 @@ java:
       secrets:
         - AppInsightsInstrumentationKey
         - s2s-secret-workflow-api
+        - wa-workflow-api-POSTGRES-PASS
