--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -11,7 +11,6 @@ java:
     IDAM_URL: "https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net"
     POSTGRES_PORT: 5432
     POSTGRES_HOST: wa-workflow-api-postgres-db-{{ .Values.global.environment }}.postgres.database.azure.com
-    POSTGRES_USERNAME: wa-wa@wa-workflow-api-postgres-db-{{ .Values.global.environment }}
     POSTGRES_CONNECTION_OPTIONS: "?sslmode=require"
   keyVaults:
     wa:
@@ -19,3 +18,4 @@ java:
         - AppInsightsInstrumentationKey
         - s2s-secret-workflow-api
         - workflow-api-POSTGRES-PASS
+        - workflow-api-POSTGRES-USER
