try to test the race condition but no luck so far

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,6 +1,7 @@
 logging:
   level:
     org.springframework: info
+    org.springframework.transaction: debug
     uk.gov.hmcts.reform: debug
 
 feign:
