--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -42,7 +42,6 @@ spring:
     enabled: true
     baselineOnMigrate: true
     schemas: ${POSTGRES_NAME:wa_workflow_api}
-
 security:
   anonymousPaths:
     - "/"
@@ -58,6 +57,7 @@ security:
   authorisedServices:
     - "wa_workflow_api"
     - "wa_case_event_handler"
+    - "camunda-bpm"
 
 auth:
   provider:
