add test to conver pessimic write lock

--- a/src/main/resources/application-local.yaml
+++ b/src/main/resources/application-local.yaml
@@ -1,7 +1,7 @@
 logging:
   level:
     org.springframework:
-      transaction: debug
+      transaction: ${LOG:info}
       jdbc.core.JdbcTemplate: debug
     org.hibernate:
       SQL: debug
