added functional test

--- a/src/functionalTest/resources/application-functional.yaml
+++ b/src/functionalTest/resources/application-functional.yaml
@@ -3,10 +3,10 @@ targets:
 
 spring.flyway.enabled: false
 
-spring:
-  datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:ia_timed_event_service
-    username: sa
-    password:
-    platform: h2
+#spring:
+#  datasource:
+#    driverClassName: org.h2.Driver
+#    url: jdbc:h2:mem:ia_timed_event_service
+#    username: sa
+#    password:
+#    platform: h2
