--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -8,6 +8,7 @@ java:
     S2S_URL: "http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
     IDAM_URL: "https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net"
     POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
+    POSTGRES_PORT: "{{ .Values.postgresql.postgresqlPort}}"
     POSTGRES_NAME: "{{ .Values.postgresql.postgresqlDatabase}}"
     POSTGRES_USERNAME: "{{ .Values.postgresql.postgresqlUsername}}"
     POSTGRES_PASSWORD: "{{ .Values.postgresql.postgresqlPassword}}"
@@ -19,3 +20,7 @@ java:
         - s2s-secret-workflow-api
   postgresql:
     enabled: true
+      postgresqlUsername: postgres
+      postgresqlPassword: postgres
+      postgresqlDatabase: wa_workflow_api
+      postgresqlPort: 5432
