--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,6 +24,7 @@ govUkHolidays:
   url: https://www.gov.uk/
 
 spring:
+  data.rest.basePath: /testing
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     properties:
