--- a/build.gradle
+++ b/build.gradle
@@ -249,21 +249,35 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json'
-  compile group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.3.0-alpha1'
-  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-jdbc'
+  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-aop') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-json') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+  implementation ('org.springframework.boot:spring-boot-starter-data-jpa') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
+  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
   compile group: 'io.springfox', name: 'springfox-swagger-ui', version: versions.springfoxSwagger
 
   implementation group: 'uk.gov.hmcts.reform', name: 'logging', version: versions.reformLogging
   implementation group: 'uk.gov.hmcts.reform', name: 'logging-appinsights', version: versions.reformLogging
-  implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.7.RELEASE'
-  implementation group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0'
-  compile group: 'org.camunda.bpm', name: 'camunda-engine', version: '7.14.0'
+  implementation (group: 'uk.gov.hmcts.reform', name: 'properties-volume-spring-boot-starter', version: '0.1.0') {
+    exclude group: 'org.hibernate', module: 'hibernate-core'
+  }
+
+  implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
+  implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
 
   implementation group: 'org.flywaydb', name: 'flyway-core', version: '5.2.4'
   implementation group: 'org.postgresql', name: 'postgresql', version: '42.2.13'
@@ -274,9 +288,10 @@ dependencies {
   compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-core', version: '9.0.43'
   compile group: 'org.apache.tomcat.embed', name: 'tomcat-embed-websocket', version: '9.0.43'
 
-  compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
+  compile group: 'org.hibernate', name: 'hibernate-core', version: '5.4.27.Final'
 
   compile group: 'org.camunda.bpm', name: 'camunda-external-task-client', version: '1.4.0'
+
   compile group: 'javax.xml', name: 'jaxb-api', version: '2.1'
 
   compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
