--- a/src/integrationTest/resources/application-integration.yaml
+++ b/src/integrationTest/resources/application-integration.yaml
@@ -1,12 +1,17 @@
-config:
-  stacktraceEnabled: false
-
 spring.flyway.enabled: false
 
 spring:
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:ia_timed_event_service
+    url: jdbc:h2:mem:wa_workflow_api;DEFAULT_LOCK_TIMEOUT=0;LOCK_TIMEOUT=0
     username: sa
-    password:
+    password: password
+    initialization-mode: embedded
     platform: h2
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    properties:
+      hibernate:
+        show_sql: true
+        default_schema: ${POSTGRES_NAME:wa_workflow_api}
+    hibernate.ddl-auto: create
