Revert "point preview to db in aat"
This reverts commit 2f216a0bfa1fd27e9c7a3f11b7984382bb2fdcf4.

--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -2,3 +2,20 @@ java:
   # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
+  environment:
+    RESTART_APP: 1
+    CAMUNDA_URL: "http://camunda-api-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal/engine-rest"
+    S2S_URL: "http://rpe-service-auth-provider-{{ .Values.global.environment }}.service.core-compute-{{ .Values.global.environment }}.internal"
+    IDAM_URL: "https://idam-api.{{ .Values.global.environment }}.platform.hmcts.net"
+    POSTGRES_HOST: "{{ .Release.Name }}-postgresql"
+    POSTGRES_NAME: "{{ .Values.postgresql.postgresqlDatabase}}"
+    POSTGRES_USERNAME: "{{ .Values.postgresql.postgresqlUsername}}"
+    POSTGRES_PASSWORD: "{{ .Values.postgresql.postgresqlPassword}}"
+    POSTGRES_CONNECTION_OPTIONS: ""
+  keyVaults:
+    wa:
+      secrets:
+        - AppInsightsInstrumentationKey
+        - s2s-secret-workflow-api
+  postgresql:
+    enabled: true
