Add launch darkly sdk key from vault (#194)

--- a/src/main/resources/bootstrap.yaml
+++ b/src/main/resources/bootstrap.yaml
@@ -9,4 +9,4 @@ spring:
         s2s-secret-workflow-api: S2S_SECRET_WORKFLOW_API
         workflow-api-POSTGRES-PASS: POSTGRES_PASSWORD
         workflow-api-POSTGRES-USER: POSTGRES_USERNAME
-
+        ld-secret: LAUNCH_DARKLY_SDK_KEY
