--- a/build.gradle
+++ b/build.gradle
@@ -210,7 +210,6 @@ dependencyCheck {
 dependencyManagement {
   dependencies {
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
-    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     // CVE-2018-10237 - Unbounded memory allocation
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
       entry 'guava'
@@ -230,7 +229,7 @@ def versions = [
   junitPlatform   : '1.7.0',
   reformLogging   : '5.1.5',
   springBoot      : '2.4.2',
-  springfoxSwagger: '3.0.0',
+  springfoxSwagger: '2.9.2',
   serenity        : '2.2.12',
   gradlePitest    : '1.5.1',
   pitest          : '1.5.2',
@@ -249,22 +248,16 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-aop') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-json') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation ('org.springframework.boot:spring-boot-starter-data-jpa') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
+
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: versions.springBoot
+
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
+
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
