--- a/build.gradle
+++ b/build.gradle
@@ -178,7 +178,8 @@ sonarqube {
     property "sonar.coverage.jacoco.xmlReportPaths", "${jacocoTestReport.reports.xml.destination.path}"
     property "sonar.pitest.mode", "reuseReport"
     property "sonar.pitest.reportsDirectory", "build/reports/pitest"
-    property "sonar.exclusions", "src/testUtils/java/uk/gov/hmcts/reform/waworkflowapi/**"
+    property "sonar.exclusions", "src/main/java/uk/gov/hmcts/reform/waworkflowapi/config/**," +
+            "src/testUtils/java/uk/gov/hmcts/reform/waworkflowapi/**"
   }
 }
 
@@ -210,7 +211,6 @@ dependencyCheck {
 dependencyManagement {
   dependencies {
     dependency group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.68'
-    dependency group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
     // CVE-2018-10237 - Unbounded memory allocation
     dependencySet(group: 'com.google.guava', version: '30.1-jre') {
       entry 'guava'
@@ -249,22 +249,17 @@ ext.libraries = [
 ]
 
 dependencies {
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-web') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-actuator') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-aop') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation (group: 'org.springframework.boot', name: 'spring-boot-starter-json') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
-  implementation ('org.springframework.boot:spring-boot-starter-data-jpa') {
-    exclude group: 'org.hibernate', module: 'hibernate-core'
-  }
+
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-json', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-client', version: versions.springBoot
+  implementation group: 'org.springframework.boot', name: 'spring-boot-starter-oauth2-resource-server', version: versions.springBoot
+
   implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-hystrix', version: '2.2.5.RELEASE'
+
   compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-openfeign', version: '2.2.5.RELEASE'
 
   implementation group: 'io.springfox', name: 'springfox-swagger2', version: versions.springfoxSwagger
@@ -294,7 +289,6 @@ dependencies {
   compile group: 'javax.xml', name: 'jaxb-api', version: '2.1'
 
   compile group: 'uk.gov.hmcts.reform', name: 'service-auth-provider-client', version: '3.1.2'
-  compile group: 'uk.gov.hmcts.reform.auth', name: 'auth-checker-lib', version: '2.1.4'
   compile group: 'com.launchdarkly', name: 'launchdarkly-java-server-sdk', version: '5.2.2'
 
   testImplementation libraries.junit5
