upgrade both springboot and Chart versions (#269)
* upgrade both springboot and Chart versions

* Bumping chart version

Co-authored-by: hmcts-jenkins-wa <69045096+hmcts-jenkins-wa[bot]@users.noreply.github.com>

--- a/charts/wa-workflow-api/values.preview.template.yaml
+++ b/charts/wa-workflow-api/values.preview.template.yaml
@@ -1,5 +1,4 @@
 java:
-  # Don't modify below here
   image: ${IMAGE_NAME}
   ingressHost: ${SERVICE_FQDN}
   environment:
@@ -14,8 +13,10 @@ java:
   keyVaults:
     wa:
       secrets:
-        - AppInsightsInstrumentationKey
-        - s2s-secret-workflow-api
+        - name: AppInsightsInstrumentationKey
+          alias: azure.application-insights.instrumentation-key
+        - name: s2s-secret-workflow-api
+          alias: S2S_SECRET_WORKFLOW_API
   postgresql:
     enabled: true
     postgresqlDatabase: wa_workflow_api
