--- a/charts/wa-workflow-api/values.yaml
+++ b/charts/wa-workflow-api/values.yaml
@@ -15,8 +15,13 @@ java:
   keyVaults:
     wa:
       secrets:
-        - AppInsightsInstrumentationKey
-        - s2s-secret-workflow-api
-        - workflow-api-POSTGRES-PASS
-        - workflow-api-POSTGRES-USER
-        - ld-secret
+        - name: AppInsightsInstrumentationKey
+          alias: azure.application-insights.instrumentation-key
+        - name: s2s-secret-workflow-api
+          alias: S2S_SECRET_WORKFLOW_API
+        - name: workflow-api-POSTGRES-PASS
+          alias: POSTGRES_PASSWORD
+        - name: workflow-api-POSTGRES-USER
+          alias: POSTGRES_USERNAME
+        - name: ld-secret
+          alias: LAUNCH_DARKLY_SDK_KEY
