--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -25,6 +25,8 @@ govUkHolidays:
   url: https://www.gov.uk/
 
 spring:
+  config:
+    import: "optional:configtree:/mnt/secrets/wa/"
   data.rest.basePath: /testing
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
